Fix click events not firing on mobile

--- a/stylesheets/main.sass
+++ b/stylesheets/main.sass
@@ -109,6 +109,7 @@ body
   @include unselectable
 
 .content
+  @include clickable
   background-color: #fff
   display: block
   margin-left: auto
